Fixed scrollbars, centered app on page

--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,8 @@ p {
   height: 698px;
   width: 397.39px;
   background-size: cover;
+  position: relative;
+  margin: 30px auto;
 }
 
 /*App container*/
@@ -59,8 +61,8 @@ p {
 position: absolute;
 overflow: hidden auto;
  display: block;
- top: 45px;
- left: 31px;
+ top: 37px;
+ left: 23px;
  height: 624px;
  width: 351px;
 }
